--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,10 @@
         <module>passport-protocol</module>
         <module>passport-autoconfigure</module>
         <module>passport-main</module>
-
+        <module>passport-sdk</module>
     </modules>
-
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
-
-
 </project>
